--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
 <body>
 <a href="">test</a>
 <a href="list">test1</a>
+<a>test</a>
 </body>
 <script id="main" type="text/javascript" data-baseurl="../js/"  src="../js/lib/require.js" async="true" data-main="../js/main" ></script>
 <script type="text/javascript">
