--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <a href="list">test1</a>
 <a>test</a>
 <a></a>
-<a></a>
+<a>test</a>
 </body>
 <script id="main" type="text/javascript" data-baseurl="../js/"  src="../js/lib/require.js" async="true" data-main="../js/main" ></script>
 <script type="text/javascript">
