--- a/example1/index.html
+++ b/example1/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div><a href="#module1">dsfsd</a></div>
+<div><a href="#module3">dsfsd</a></div>
 <div id="container"></div>
 <script data-baseurl="./" data-main="main.js" src="libs/require.js" id="main"></script>
 </body>
