--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 <a href="#module2">test</a>
 <a href="#sdfsdf ">stes</a>
 
+<a href="list">test1</a>
 
 </body>
 <script type="text/javascript" id="main" data-baseurl="./" data-main="main.js" src="libs/require.js"></script>
