--- a/exercise/index.html
+++ b/exercise/index.html
@@ -8,5 +8,5 @@
 <body>
 
 </body>
-<script type="text/javascript" data-main="main.js" data-baseurl="./" src="libs/require.js" ></script>
+<script type="text/javascript" id="main" data-main="main.js" data-baseurl="./" src="libs/require.js" ></script>
 </html>
