--- a/example1/module1/tpl.html
+++ b/example1/module1/tpl.html
@@ -1,8 +1,9 @@
 <div>
     Here is module 1. My name: <%=name %>
 </div>
-<p>test</p>
+<p class="prompt" >test</p>
 <select id="test">
+
 	<option value="2" >234</option>
 	<option value="23" >erew</option>
 </select>
