--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
-<div>test</div>
+<div>laji test</div>
 </body>
 
-<script type="text/javascript" src="libs/require.js"  data-main="main.js" id="main" data-baseurl="./" ></script>
+
 </html>
